paas/k8s-manifests/gatekeeper/constraint-signed-images.yaml
---
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: imagemustbesigned
spec:
  crd:
    spec:
      names:
        kind: ImageMustBeSigned
      validation:
        openAPIV3Schema:
          type: object
          properties:
            patterns:
              type: array
              items:
                type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package imagemustbesigned
        violation[{"msg": msg}] {
          container := input_containers[_]
          not signed(container.image)
          msg := sprintf("Image %v must be signed with Cosign", [container.image])
        }
        signed(image) {
          input.review.object.metadata.annotations["cosign.sig"]
        }
        input_containers[c] {
          c := input.review.object.spec.containers[_]
        }
